change index and css file for color contrast issue
Color contrast issue found:

Element has insufficient color contrast of 2.95 (foreground color: #7f8cff, background color: #ffffff, font size: 12.0pt (16px), font weight: normal). Expected contrast ratio of 4.5:1

--- a/style.css
+++ b/style.css
@@ -231,7 +231,7 @@ nav img {
   font-size: 77%;
   line-height: 133%;
   letter-spacing: 0.03em;
-  color: #6070ff;
+  color: #001aff;
   text-align: center;
   padding: 4px 12px;
   width: 53px;
@@ -300,7 +300,7 @@ nav img {
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
-  color: #7f8cff;
+  color: #001aff;
 }
 
 .socials2 {
